--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "bun run --hot src/index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/sqlite3": "^3.1.11"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "hono": "^4.6.3"
+    "@hono/node-server": "^1.13.2",
+    "hono": "^4.6.3",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
