--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,13 @@
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
+    
+   
+        "strict": true,
+        
+        "jsxImportSource": "hono/jsx",
+      
+    
 
     // Bundler mode
     "moduleResolution": "bundler",
@@ -23,5 +30,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
+    
   }
+  
 }
