--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "module": "src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun --hot run src/index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/sqlite3": "^3.1.11"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.0",
+    "@types/sqlite3": "^3.1.11",
+    "typescript": "^5.6.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.2",
-    "hono": "^4.6.3",
+    "express": "^4.21.1",
+    "hono": "^4.6.9",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.0.3"
   }
 }
