--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,19 @@
 {
   "compilerOptions": {
-    // Enable latest features
-    "lib": ["ESNext", "DOM"],
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
-    
-   
-        "strict": true,
-        
-        "jsxImportSource": "hono/jsx",
-      
-    
-
-    // Bundler mode
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "noEmit": true,
-
-    // Best practices
-    "strict": true,
-    "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-    
-  }
-  
+    "target": "ESNext", 
+    "module": "CommonJS", 
+    "moduleResolution": "Node", 
+    "lib": ["ESNext", "DOM"], 
+    "strict": true, 
+    "skipLibCheck": true, 
+    "noEmit": true, 
+    "esModuleInterop": true, 
+    "forceConsistentCasingInFileNames": true, 
+    "resolveJsonModule": true, 
+    "allowSyntheticDefaultImports": true, 
+    "jsx": "react-jsx", 
+    "jsxImportSource": "hono/jsx" 
+  },
+  "include": ["src"], 
+  "exclude": ["node_modules", "dist"] 
 }
